Post layout link overflow resolved

--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -1,7 +1,7 @@
 #home-grid {
     display: grid;
     width: 70%;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 550px auto;
     grid-template-rows: 33px auto;
     grid-template-areas:
     'filter sidebar'
