--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -1,4 +1,3 @@
-
 .down-section {
     display: flex;
     justify-content: space-between;
@@ -6,16 +5,16 @@
     padding-top: 20px;
 }
 
-.down-section h6{
+.down-section h6 {
     color: gray;
 }
 
-.comment-button{
+.comment-button {
     display: flex;
     align-items: center;
 }
 
-.comment-button img{
+.comment-button img {
     width: 18px;
     padding-right: 2px;
 }
@@ -29,12 +28,21 @@
     width: 100%;
 }
 
-.post-container img, 
-.post-container video{
+.post-container img,
+.post-container video {
     display: block;
     max-width: 70%;
     height: auto;
     margin: 0 auto;
+}
+
+.post-main-text {
+    overflow: hidden;
+    height: 50px;
+}
+
+.post-container {
+    overflow-wrap: anywhere;
 }
 
 .votes-sidepanel {
@@ -46,7 +54,7 @@
     width: 35px;
 }
 
-.votes-sidepanel div{
+.votes-sidepanel div {
     padding: 5px 0;
     font-size: 0.7rem;
     width: 35px;
@@ -58,7 +66,6 @@
     width: 100%;
 }
 
-.post-main h3{
+.post-main h3 {
     padding: 15px 0;
 }
-
